<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="syifa.app.mykenclengid.AddEditActivity">

    <EditTex
        android:id="@+id/text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_tabungan"
        android:textSize="20sp"
        android:typeface="serif"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/txt_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioPemasukan"
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:text="@string/pemasukan" />

                        <RadioButton
                            android:id="@+id/radioPengeluaran"
                            android:layout_width="194dp"
                            android:layout_height="match_parent"
                            android:text="@string/pengeluaran" />

                    </RadioGroup>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/txt_nominal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Rp."
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/txt_catatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:hint="@string/catatan"
                        android:minLines="5"/>

                    <EditText
                        android:id="@+id/txt_tgl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tanggal"/>


                    <LinearLayout
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnBatal"
                            android:layout_width="173dp"
                            android:layout_height="wrap_content"
                            android:text="@string/batal"/>

                        <Button
                            android:id="@+id/btnSimpan"
                            android:layout_width="164dp"
                            android:layout_height="wrap_content"
                            android:text="@string/simpan"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
